First working version'

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <title>Stencil Component Starter</title>
-  <script src="/build/mycomponent.js"></script>
+  <script src="/build/ran.js"></script>
 
 </head>
 <body>
-
-  <dr-date-range></dr-date-range>
+  It works ?
+  <ran-date-range start="2017-04" end="2018-09" selection-start="2017-04" selection-end="2017-11"></ran-date-range>
+  <ran-date-range start="2017-04" end="2018-09" selection-start="2017-12" selection-end="2018-09"></ran-date-range>
+  <ran-date-range start="2017-04" end="2018-09" selection-start="2018-02" selection-end="2018-09"></ran-date-range>
+  <ran-date-range start="2017-04" end="2018-09" selection-start="2018-04" selection-end="2018-09"></ran-date-range>
+  <ran-date-range start="2017-04" end="2018-09" selection-start="2018-07" selection-end="2018-09"></ran-date-range>
+  <ran-date-range start="2017-04" end="2018-09" selection-start="2018-07" selection-end="2018-09"></ran-date-range>
+  <ran-date-range start="2017-04" end="2018-09" selection-start="2018-09" selection-end="2018-09"></ran-date-range>
 </body>
 </html>
